remove debugging code, even that which was commented out

--- a/build.xml
+++ b/build.xml
@@ -339,13 +339,14 @@ generateSearchableToGo
         this.
     -->
     <echo> ... removing PREVIEW files</echo>
-    <!-- NOTE:
-	 The code that runs XSLT to create a list of files to be
-	 removed and then removes them should be system-indepen-
-	 dant. Some of the debugging code in this section relies on
-	 /usr/bin/find, and thus will only work on a *nix system that
-	 has such a command. Thus the debugging code is currently
-	 commented out.
+    <!--
+	What we would like to do here is just the bash cmd
+	rm $(egrep -l 'title>\[PREVIEW\] DHQ: Digital' ../../../dhq-static/dhq/vol/*.html)
+	but as far as we know removing files based on their contents
+	cannot be done in ant. I do not know how to do it in Windows,
+	so rather than use <exec> or some such the following code runs
+	XSLT to create a list of files to be removed and then removes
+	them. This should be system-independant.
     -->
     <property name="preview.list.file" location="${toDir.static.path}/list_of_preview_files_to_erase.txt"/>
     <xslt in="common/xslt/list_preview_files.xslt" 
@@ -361,30 +362,10 @@ generateSearchableToGo
         match="^file:.*${toDir.static.path}/"
         replace=""
         flags="gm"/>
-    <!-- <echo> ... DEBUG, ${toDir.static.path}/data/uvepss/ now contains, 05:</echo> <!-\-PPDMN2BR4W-\-> -->
-    <!-- <exec executable="/usr/bin/find">                                            <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="${toDir.static.path}/data/uvepss"/>                            <!-\-PPDMN2BR4W-\-> -->
-    <!-- </exec>                                                                      <!-\-PPDMN2BR4W-\-> -->
-    <!-- <echo> ... removing PREVIEW files, DEBUG OUT: ${preview.list.file}=</echo>   <!-\-PPDMN2BR4W-\-> -->
-    <!-- <concat fixlastline="yes"> <fileset file="${preview.list.file}"/> </concat>  <!-\-PPDMN2BR4W-\-> -->
-    <!-- <echo> ... removing PREVIEW files, DEBUG LIST pre-del= (find ${toDir.static.path}/vol/ -name *.xhtml)</echo> <!-\-PPDMN2BR4W-\-> -->
-    <!-- <exec executable="/usr/bin/find">                                            <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="${toDir.static.path}/vol"/>                                    <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="-name"/>                                                       <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="*.xhtml"/>                                                     <!-\-PPDMN2BR4W-\-> -->
-    <!-- </exec>                                                                      <!-\-PPDMN2BR4W-\-> -->
     <delete>
       <fileset dir="${toDir.static.path}" includesfile="${preview.list.file}"/>
     </delete>
-    <!-- <echo> ... removing PREVIEW files, DEBUG LIST postdel= (find ${toDir.static.path}/vol/ -name *.xhtml)</echo> <!-\-PPDMN2BR4W-\-> -->
-    <!-- <exec executable="/usr/bin/find">                                            <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="${toDir.static.path}/vol"/>                                    <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="-name"/>                                                       <!-\-PPDMN2BR4W-\-> -->
-    <!--   <arg value="*.xhtml"/>                                                     <!-\-PPDMN2BR4W-\-> -->
-    <!-- </exec>                                                                      <!-\-PPDMN2BR4W-\-> -->
-    <!-- Convert path to config file from relative path to absolute path: -->
     <property name="absolute.config.file" location="${toDir.static.path}/data/uvepss/config.xml"/>
-    <echo level="info">Debug: call UVEPSS with dir=${uvepssDir} and ssConfigFile=${absolute.config.file}</echo>
     <ant dir="${uvepssDir}" antfile="build.xml">
       <property name="ssConfigFile" value="${absolute.config.file}"/>
     </ant>
