Update build command to use `generateSearchable`

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y ant ant-contrib
 
       - name: 🏗️ Build the site
-        run: ant -lib common/lib/saxon generateSite
+        run: ant -lib common/lib/saxon generateSearchable
 
       - name: 🔐 Create Key File
         run: install -m 600 -D /dev/null ~/.ssh/id_ed25519 && echo "${{ secrets.DHQ_DEPLOY_SSH_PRIVATEKEY }}" > ~/.ssh/id_ed25519
