Trigger deploy to `dhq.digitalhumanities.org` on push

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,8 @@
-name: DHQ Production Deploy
+name: Deploy to dhq.digitalhumanities.org
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "static_site_generation" ]
 
 jobs:
   deploy:
