--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy to dhq.digitalhumanities.org
 
 on:
   push:
-    branches: [ "static_site_generation" ]
+    branches: [ "main" ]
 
 jobs:
   deploy:
