remove brace expansion and explicitly write out three copy statements for recommendations

--- a/.github/workflows/recommendations_pull.yaml
+++ b/.github/workflows/recommendations_pull.yaml
@@ -16,7 +16,9 @@ jobs:
 
       - name: Copy recommendation tsvs into DHQ-journal
         run: |
-          cp recs_repo/{dhq-recs-zfill-bm25.tsv, dhq-recs-zfill-kwd.tsv, dhq-recs-zfill-spctr.tsv} data/dhq-recs/
+          cp recs_repo/dhq-recs-zfill-bm25.tsv data/dhq-recs/
+          cp recs_repo/dhq-recs-zfill-kwd.tsv data/dhq-recs/
+          cp recs_repo/dhq-recs-zfill-spctr.tsv data/dhq-recs/
 
       - name: Commit and Push Changes
         run: |
